made changes to profiles
